--- a/resources/assets/styles/autoload/_bootstrap.scss
+++ b/resources/assets/styles/autoload/_bootstrap.scss
@@ -2,3 +2,9 @@
 // Running `sage preset` again could result in automatic deletion of this file.
 // Because of this, we do not recommend editing this file.
 // @import "~bootstrap/scss/bootstrap";
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
+@import "~bootstrap/scss/utilities";
+@import "~bootstrap/scss/modal";
+@import "~bootstrap/scss/carousel";
