--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -6,12 +6,14 @@ $ghost-white:         #f8f8ff;
 $white:               #fff;
 $black:               #000;
 $blue-light:          #aae0ea;
+$blue-medium:         #211d71;
 $blue-dark:           #173c5e;
 $green-light:         #1c6061;
 $gold:                #d7bd70;
 $secondary:           $ghost-white;
 $brown-light:         #eae3cf;
 $brown-medium:        #b6a58b;
+$orange:              #f5822a;
 
 // link color
 $link:                $blue-dark;
