--- a/resources/assets/styles/layouts/_blog.scss
+++ b/resources/assets/styles/layouts/_blog.scss
@@ -9,7 +9,7 @@
 
   .grid {
     grid-template-columns: 1fr;
-    align-items: initial;
+    align-items: baseline;
 
     @include small-up {
       grid-template-columns: 2fr 1fr;
