--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -81,3 +81,4 @@ $slick-loader-path: "~slick-carousel/slick/";
 @import "blocks/block-our-services-single";
 @import "blocks/block-slider-filter-items";
 @import "blocks/block-image-grid-split";
+@import "blocks/block-offers-gallery";
