--- a/resources/assets/styles/gutenberg.scss
+++ b/resources/assets/styles/gutenberg.scss
@@ -74,3 +74,4 @@ $slick-loader-path: "~slick-carousel/slick/";
 @import "blocks/block-our-services-single";
 @import "blocks/block-slider-filter-items";
 @import "blocks/block-image-grid-split";
+@import "blocks/block-offers-gallery";
