--- a/resources/assets/styles/blocks/block-slider-testimonials-3.scss
+++ b/resources/assets/styles/blocks/block-slider-testimonials-3.scss
@@ -48,7 +48,7 @@
   &__content {
     position: relative;
     background: $white;
-    color: $font-color;
+    color: $gray-dark;
     padding: 3em;
     border-radius: $border-radius;
 
