--- a/resources/assets/styles/blocks/block-slider-testimonials-cpt.scss
+++ b/resources/assets/styles/blocks/block-slider-testimonials-cpt.scss
@@ -17,7 +17,7 @@
     flex-direction: column;
     justify-content: space-between;
     background: $white;
-    color: $font-color;
+    color: $gray-dark;
     padding: 1.5em;
     border-radius: $border-radius;
     max-width: 700px;
