--- a/resources/assets/styles/components/_buttons.scss
+++ b/resources/assets/styles/components/_buttons.scss
@@ -26,10 +26,10 @@
 
 .basic-btn,
 .gallery-btn {
-  text-transform: uppercase;
+  // text-transform: uppercase;
   background: transparent;
   color: $button-text-color;
-  padding: 0.6rem 3rem;
+  padding: 0.6rem 0.3rem;
   // letter-spacing: $letter-spacing;
   display: inline-block;
   text-align: center;
